# AI-Game-DnD

./: .gitignore  README.md  check_deepseek_sdk.py  dnd_agent.py  dnd_game.py  main.py  pyproject.toml
api/: event_init.py  event_novel.py  health.py  invoke.py
core/: config.py  deepseek_config.py  exceptions.py  llm_exceptions.py  logging.py  response.py
events/: base.py  dispatcher.py  types.py
events/handlers/: combat_handler.py  decision_handler.py  end_handler.py  init_handler.py  puzzle_handler.py
playground/: dnd_agent.py  dnd_game.py
prompts/: combat_prompt.py  decision_prompt.py  end_prompt.py  event_init_prompt.py  init_prompt.py  novel_prompt.py  puzzle_prompt.py
repositories/: memory_state_repository.py  state_repository.py
schemas/: base.py  combat.py  decision.py  end.py  event_init.py  init.py  invoke.py  novel.py  puzzle.py
scripts/: test_deepseek.py
services/: event_init_service.py  event_novel_service.py
services/ai/: deepseek_client.py
test/: test_config.py  test_exceptions.py  test_health.py  test_init_invoke.py  test_init_prompt.py  test_invoke.py  test_response.py
test_finish/: test_config.py  test_exceptions.py  test_health.py  test_invoke.py  test_response.py
tests/: check_config.py  check_exception.py  check_logging.py  check_response.py
utils/: json_parser.py
